differential_testing/gcc_regression/gcc_reg_cb/results/gcc540/save_st/pr70756.c-5.4.0-0.out.txt
pr70756.c: In function ‘fn0’:
pr70756.c:16:3: error: invalid use of flexible array member
   1234 && &s.y + 1;  
   ^
pr70756.c: In function ‘fn1’:
pr70756.c:22:3: error: invalid use of array with unspecified bounds
   1234, A += 1;  
   ^
